Ignore SIGPIPE when using GSocket

http://bugzilla.gnome.org/show_bug.cgi?id=583001